Updated repo with new bencharmks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
   benchmark:
     build:
       context: .
-    command: pytest test.py
+    command: pytest test.py --benchmark-min-time=1m
     volumes:
     - .:/app
     links:
